密码，邮箱，手机的换绑 账号安全性

--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -365,7 +365,7 @@
 					<img src="/img/TouXiang.jpg">
 					<i></i>
 				</div>
-				<div class="bianJi" href="/personalInformation?xiugai=0">编辑資料</div>
+				<a class="bianJi" href="/personalInformation?xiugai=0">编辑資料</a>
 			</div>
 			<div class="paiMing">
 				<ul>
