--- a/src/main/resources/templates/personalInformation.html
+++ b/src/main/resources/templates/personalInformation.html
@@ -275,9 +275,7 @@
 
 
     </style>
-    <script>
 
-    </script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -289,7 +287,7 @@
                     <a data-report-click="{&quot;spm&quot;:&quot;3001.5413&quot;}">个人资料</a>
                 </li>
                 <li class="">
-                    <a data-report-click="{&quot;spm&quot;:&quot;3001.5414&quot;}">账号设置</a>
+                    <a data-report-click="{&quot;spm&quot;:&quot;3001.5414&quot;}" href="/accountSettings?status=0">账号设置</a>
                 </li>
                 <li>
                     <a data-report-click="{&quot;spm&quot;:&quot;3001.5699&quot;}">隐私设置</a>
