--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -171,6 +171,9 @@
 						<div class="form-group">
 							<input type="text" th:value="${telephone}" id="telephone" name="telephone" placeholder="填写常用手机号" class="el-input__inner">
 						</div>
+						<div class="form-group">
+							<input type="text" th:value="${email}" id="email" name="email" placeholder="填写常用邮箱" class="el-input__inner">
+						</div>
 						<div class="register-hidden-gruop"></div>
 						<div class="form-group">
 							<button type="submit" class="button">
