文章发布的重构

--- a/src/main/resources/templates/tupian.html
+++ b/src/main/resources/templates/tupian.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <form action="/upload_action" method="post" enctype="multipart/form-data">
-    <input type="file" id="file" name="file" value="file">
+    <input type="file" id="file" name="file" value="">
     <div id="click" style="width: 200px; height: 200px; border: 1px solid #000;"></div>
     <button  type="submit">上传</button>
 </form>
