--- a/src/main/resources/templates/accountSettings.html
+++ b/src/main/resources/templates/accountSettings.html
@@ -498,7 +498,7 @@
     </script>
 </head>
 <body>
-
+<div th:insert="~{navigation :: nav}"></div>
 <section>
     <div class="container">
         <div class="container-left">
