--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -569,7 +569,7 @@
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h3><span class="glyphicon glyphicon-plus" aria-hidden="true"/> 发起</h3>
+            <h3><span class="glyphicon glyphicon-plus" aria-hidden="true" style="font-size: x-large;"/> 发起</h3>
             <input type="hidden" name="id" th:value="${id}">
             <div class="form-group">
                 <label for="title">问题标题（简单扼要）:</label>
@@ -590,7 +590,6 @@
                 <div class="plus-tag-add">
                     <ul class="Form FancyForm">
                         <li>
-                            <span class="label">我的标签：</span>
                             <input id="myTag" name="myTag" type="text" class="stext" maxlength="20"/>
                             <label>输入标签</label>
                             <span class="fff"></span>
